syntax = "proto3";
package  assesement_test_MicroServices;

import "google/protobuf/timestamp.proto";
import "commons.proto";
option go_package = "pb/";


service UserService{
  rpc GetUserById(ById) returns (UserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc DeleteUser(ById) returns (UserResponse);
  rpc ListUsers(empty) returns (UserResponseRepeated);
}

message User {
  string Id = 1;
  string UserName = 2;
  string Address = 3;
  string PostCode = 4;
  string Province = 5;
  string City = 6;
  google.protobuf.Timestamp CreatedAt = 7;
  google.protobuf.Timestamp UpdatedAt = 8;
}

message UserResponse{
  int64 code=1;
  string message=2;
  User data=3;
}
message UserResponseRepeated{
  int64 code=1;
  string message=2;
  repeated User data=3;
}
message UpdateUserRequest{
  string id = 1;
  optional string UserName = 2;
  optional string Address = 3;
  optional string PostCode = 4;
  optional string Province = 5;
  optional string City = 6;
}
message CreateUserRequest{
  string UserName = 1;
  string Address = 2;
  string PostCode = 3;
  string Province = 4;
  string City = 5;
}